<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.droidcafeinput.MainActivity">
    <item
        android:id="@+id/action_most_popular"
        android:orderInCategory="100"
        android:title="@string/app_popular_name"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_highest_rated"
        android:orderInCategory="100"
        android:title="@string/app_rated_name"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="100"
        android:title="@string/app_favorite_name"
        app:showAsAction="never" />
</menu>